schema/testdata/errors/enum_default_gibberish.keel
model Post {
    fields {
        //expect-error:32:41:E020:'Gibberish' not found
        type PostType @default(Gibberish)
    }
}

enum PostType {
    Draft
    Published
}
